# fqn-renamer

./: Cargo.toml  LICENSE.txt  README.md
fixtures/: Foo.java  differentFoo.kt  useFoo.kt
src/: app.rs  controller.rs  event_log.rs  found_match.rs  fqcn.rs  fqcn_processor.rs  fqcn_replacer.rs  main.rs  matched_file.rs  rg_worker.rs  rg_worker_thread.rs  scrollable.rs  ui.rs
