[package]
name = "identrenamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tui = { git = "https://github.com/dymk/tui-rs", branch = "dymk--interactive-form" }
tui = { path = "../tui-rs" }
crossterm = "0.23"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1"
matches = "0.1"
parking_lot = "0.12"